--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
 <h1> Tair Talassov </h1>
 
 <h2> beginner backend </h2>
+<ul>
+  <li>научился создавать свою страницу в github</li>
+</ul> 
+
+<ul>
+  <li>разобрался в коде про сортировку</li>
+</ul> 
+
+<ul>
+  <li>изучил основы phpMyAdmin</li>
+</ul> 
+
+<ul>
+  <li>взаимодейстовал с PDO </li>
+</ul>
+
+<ul>
+  <li>науился подключать mysql</li>
+</ul> 
+
