--- a/index.html
+++ b/index.html
@@ -21,3 +21,29 @@
   <li>науился подключать mysql</li>
 </ul> 
 
+<ul>
+  <li></li>
+</ul>
+
+
+<ul>
+  <li>принцип пработы с базой данный</li>
+</ul>
+
+
+<ul>
+  <li>парсить данные сайта в таблицу pma</li>
+</ul>
+
+<ul>
+  <li>работать с методами этапа SELECT</li>
+</ul>
+
+<ul>
+  <li>взаимодействие таблиц между собой</li>
+</ul>
+
+<ul>
+  <li>превращать данные в массив и работать с помошью их ключей</li>
+</ul>
+
