--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <h1> Tair Talassov </h1>
 
+
 <h2> beginner backend </h2>
+<ul>
+  <li>3.02.2019</li>
+</ul> 
+
+
 <ul>
   <li>научился создавать свою страницу в github</li>
 </ul> 
@@ -14,7 +20,7 @@
 </ul> 
 
 <ul>
-  <li>взаимодейстовал с PDO </li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_db">взаимодейстовал с PDO</a></li>
 </ul>
 
 <ul>
@@ -22,7 +28,7 @@
 </ul> 
 
 <ul>
-  <li></li>
+  <li>10.02.2019</li>
 </ul>
 
 
@@ -32,18 +38,18 @@
 
 
 <ul>
-  <li>парсить данные сайта в таблицу pma</li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_functions">парсить данные сайта в таблицу pma</a></li>
 </ul>
 
 <ul>
-  <li>работать с методами этапа SELECT</li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_index">работать с методами этапа SELECT</a></li>
 </ul>
 
 <ul>
-  <li>взаимодействие таблиц между собой</li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_reload">взаимодействие таблиц между собой</a></li>
 </ul>
 
 <ul>
-  <li>превращать данные в массив и работать с помошью их ключей</li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_reload">превращать данные в массив и работать с помошью их ключей</a></li>
 </ul>
 
