--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<h1> Tair Talassov </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<style type="text/css" media="all">
+		html, body {
+			min-height: 100%
+		}
+
+		body {
+			padding: 0;
+			margin: 0;
+			color: #404040;
+			font-family: Arial, sans-serif;
+			width: 100%;
+			
+		}
+	</style>
+</head>
+<body>
+
+ <h1> Tair Talassov </h1>
 
 
 <h2> beginner backend </h2>
-<ul>
-  <li>3.02.2019</li>
-</ul> 
+<h1>3.02.2019</h1>
+
 
 
 <ul>
@@ -27,10 +48,7 @@
   <li>науился подключать mysql</li>
 </ul> 
 
-<ul>
-  <li>10.02.2019</li>
-</ul>
-
+<h1>10.02.2019</h1>
 
 <ul>
   <li>принцип пработы с базой данный</li>
@@ -52,4 +70,7 @@
 <ul>
   <li><a href="https://github.com/altairwayne/ssad/blob/master/rest_reload">превращать данные в массив и работать с помошью их ключей</a></li>
 </ul>
+	
+</body>
+</html>
 
