--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		body {
 			padding: 0;
 			margin: 0;
-			color: #404040;
+			color: black;
 			font-family: Arial, sans-serif;
 			width: 100%;
 			padding-left: 20px;
