--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </ul> 
 
 <ul>
-  <li>разобрался в коде про сортировку</li>
+  <li><a href="https://github.com/altairwayne/ssad/blob/master/%D0%A1%D0%BE%D1%80%D1%82%D0%B8%D1%80%D0%BE%D0%B2%D0%BA%D0%B0">разобрался в коде про сортировку</a></li>
 </ul> 
 
 <ul>
