--- a/index.html
+++ b/index.html
@@ -33,9 +33,127 @@
 
 
 <h2> beginner backend </h2>
-<h1>3.02.2019</h1>
+<h1>27.01.2019</h1>
+
+	<ul>
+		
+		<li>циклы</li>
+		
+
+	</ul>
+
+	<ul>
+		<li>переменные</li>
+	</ul>
+
+	<ul>
+		<li><a href="https://github.com/altairwayne/ssad/blob/master/l1_%D1%86%D0%B8%D0%BA%D0%BB%D1%8B">операторы</a></li>
+	</ul>
 
 
+	<ul>
+		<li>массивы</li>
+	</ul>
+
+	<ul>
+		<li>присвоение</li>
+	</ul>		
+
+<h1>03.02.2019</h1>
+
+	<ul>
+		
+		<li>основы массивов</li>
+	</ul>
+
+	<ul>
+		<li>создание массива с помощью цикла</li>
+	</ul>
+
+	<ul>
+		<li><a href="https://github.com/altairwayne/ssad/blob/master/l2_%D0%BC%D0%B0%D1%81%D1%81%D0%B8%D0%B2%D1%8B%20%D0%B8%20%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8">hello функция</a></li>
+	</ul>
+
+	<ul>
+		<li>обращение к функции</li>
+	</ul>
+
+	<ul>
+		<li>таблица умножение с циклом</li>
+	</ul>
+
+
+<h1>10.02.2019</h1>
+
+
+	<ul>
+		<li>регулярные выражения</li>
+	</ul>
+
+	<ul>
+		<li>функции регулярных выражении</li>
+	</ul>
+
+	<ul>
+		<li>сравнение с шаблоном регулярного выражения</li>
+	</ul>
+
+	<ul>
+		<li>извлекать фрагменты с поомщью регулярного выражения</li>
+	</ul>
+	<ul>
+		<li><a href="https://github.com/altairwayne/ssad/blob/master/%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%20%D1%80%D0%B5%D1%81%D1%82%D0%BE%D1%80%D0%B0%D0%BD%D0%BE%D0%B2">парсинг с помощью регулярного выражения</a></li>
+	</ul>
+<h1>17.02.2019</h1>
+
+	<ul>		
+		<li><a href="https://github.com/altairwayne/ssad/blob/master/%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%20%D1%80%D0%B5%D1%81%D1%82%D0%BE%D1%80%D0%B0%D0%BD%D0%BE%D0%B2">парсинг сайта</a></li>
+	</ul>
+
+	<ul>
+		<li>перебирать массив данных</li>
+	</ul>
+
+	<ul>
+		<li>добавлять массив в таблицу</li>
+	</ul>
+
+	<ul>
+		<li>разбивать строку по регулярному выражению</li>
+	</ul>
+
+	<ul>
+		<li>работа preg_match_all</li>
+	</ul>
+
+<h1>24.02.2019</h1>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/
+	master/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8%20%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%D0%B0">функции парсинга</a></li>
+</ul>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/
+	master/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8%20%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%D0%B0">вытягивать ресторан из страницы</a></li>
+</ul>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/
+	master/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8%20%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%D0%B0">находить регулярное выражение в обьекте</a></li>
+</ul>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/
+	master/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8%20%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%D0%B0">записывать результат в массив</a></li>
+</ul>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/
+	master/%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8%20%D0%BF%D0%B0%D1%80%D1%81%D0%B8%D0%BD%D0%B3%D0%B0">находить максимальную станицу</a></li>
+</ul>
+
+<h1>3.03.2019</h1>
 
 <ul>
   <li>научился создавать свою страницу в github</li>
@@ -57,7 +175,7 @@
   <li>науился подключать mysql</li>
 </ul> 
 
-<h1>10.02.2019</h1>
+<h1>10.03.2019</h1>
 
 <ul>
   <li>принцип пработы с базой данный</li>
@@ -81,5 +199,34 @@
 </ul>
 	
 </body>
+
+<h1>17.02.2019</h1>
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/rest-function">разбиение данных на массивы	</a></li>
+</ul>
+
+<ul>
+	<li>убирать дублирующиеся элементы в массиве</li>
+</ul>
+
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/rest-reload">SQL Обьеденения</a></li>
+</ul>
+
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index-rest">работа с LEFT JOIN</a></li>
+</ul>
+
+
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index-rest">нахождения среднего чека</a></li>
+</ul>
+
+
+
 </html>
+
 
