--- a/index.html
+++ b/index.html
@@ -224,6 +224,25 @@
 <ul>
 	<li><a href="https://github.com/altairwayne/ssad/blob/master/index-rest">нахождения среднего чека</a></li>
 </ul>
+	
+
+<h1>24.03.2019</h1>
+<li>
+	<ul>изучение архитектуры "клиент-сервер"</ul>
+</li>
+<li>
+	<ul>изучение куки</ul>
+</li>
+<li>
+	<ul>взаимодействие между клиентом и сервером</ul>
+</li>
+<li>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_index"></a>передача даных на сервер (логин и пароль)</ul>
+</li>
+<li>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_auth"></a>логика авторизации</ul>
+</li>
+
 
 
 
