--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
 	<ul>взаимодействие между клиентом и сервером</ul>
 </li>
 <li>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_index"></a>передача даных на сервер (логин и пароль)</ul>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_index">передача даных на сервер (логин и пароль)</a></ul>
 </li>
 <li>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_auth"></a>логика авторизации</ul>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_auth">логика авторизации</a></ul>
 </li>
 
 
