--- a/index.html
+++ b/index.html
@@ -242,7 +242,22 @@
 <ul>
 	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_auth">логика авторизации</a></ul>
 </ul>
-
+<h1>31.03.2019</h1>
+<ul>
+	<li>как взаимодействовать с библиотеками</li>
+</ul>
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">подключение библиотеки nicic-a</a></li>
+</ul>
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">анонимные функции</a></li>
+</ul>
+<ul>
+	<li>пространство имен</li>
+</ul>
+<ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</li>
+</ul>
 
 
 
