--- a/index.html
+++ b/index.html
@@ -244,19 +244,19 @@
 </ul>
 <h1>31.03.2019</h1>
 <ul>
-	<li>как взаимодействовать с библиотеками</li>
+	<ul>как взаимодействовать с библиотеками</ul>
 </ul>
 <ul>
-	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">подключение библиотеки nicic-a</a></li>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">подключение библиотеки nicic-a</a></ul>
 </ul>
 <ul>
-	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">анонимные функции</a></li>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">анонимные функции</a></ul>
 </ul>
 <ul>
-	<li>пространство имен</li>
+	<ul>пространство имен</ul>
 </ul>
 <ul>
-	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</li>
+	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</ul>
 </ul>
 
 
