--- a/index.html
+++ b/index.html
@@ -228,35 +228,35 @@
 
 <h1>24.03.2019</h1>
 <ul>
-	<ul>изучение архитектуры "клиент-сервер"</ul>
+	<li>изучение архитектуры "клиент-сервер"</li>
 </ul>
 <ul>
-	<ul>изучение куки</ul>
+	<li>изучение куки</li>
 </ul>
 <ul>
-	<ul>взаимодействие между клиентом и сервером</ul>
+	<li>взаимодействие между клиентом и сервером</li>
 </ul>
 <ul>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_index">передача даных на сервер (логин и пароль)</a></ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/session_index">передача даных на сервер (логин и пароль)</a></li>
 </ul>
 <ul>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/session_auth">логика авторизации</a></ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/session_auth">логика авторизации</a></li>
 </ul>
 <h1>31.03.2019</h1>
 <ul>
-	<ul>как взаимодействовать с библиотеками</ul>
+	<li>как взаимодействовать с библиотеками</li>
 </ul>
 <ul>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">подключение библиотеки nicic-a</a></ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">подключение библиотеки nicic-a</a></li>
 </ul>
 <ul>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">анонимные функции</a></ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">анонимные функции</li>
 </ul>
 <ul>
-	<ul>пространство имен</ul>
+	<li>пространство имен</li>
 </ul>
 <ul>
-	<ul><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</ul>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</li>
 </ul>
 
 
