--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 	<li>пространство имен</li>
 </ul>
 <ul>
-	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">сновы rout</a>о</li>
+	<li><a href="https://github.com/altairwayne/ssad/blob/master/index_rout">основы rout</a></li>
 </ul>
 
 
