--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
 	<li><a href="https://github.com/altairwayne/ssad/blob/master/db_dol">обращения статик элементам</a></li>
 	<li><a href="https://github.com/altairwayne/ssad/blob/master/db_index">controller-ы</a></li>
 </ul>
+<h1>31.03.2019</h1>
+<ul class="list4b">
+	<li>как взаимодействовать с библиотеками</li>
+	<li>взаимодействие с контролерами</li>
+	<li>создание функции с помощью рекурсии</li>
+	<li>наследование функции</li>
+	<li>правильное подключение PDO</li>
+</ul>
 
 </html>
 
