--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 </ul>
 <h1>31.03.2019</h1>
 <ul class="list4b">
-	<li>как взаимодействовать с библиотеками</li>
+	<<li>как пользоваться One UI</li>
 	<li>взаимодействие с контролерами</li>
 	<li>создание функции с помощью рекурсии</li>
 	<li>наследование функции</li>
