--- a/index.html
+++ b/index.html
@@ -262,11 +262,19 @@
 </ul>
 <h1>14.04.2019</h1>
 <ul class="list4b">
-	<<li>как пользоваться One UI</li>
+	<li>как пользоваться One UI</li>
 	<li>взаимодействие с контролерами</li>
 	<li>создание функции с помощью рекурсии</li>
 	<li>наследование функции</li>
 	<li>правильное подключение PDO</li>
+</ul>
+<h1>21.04.2019</h1>
+<ul class="list4b">
+	<li>добавление пользователей в базу данных</li>
+	<li>метод $_POST</li>
+	<li>функция подтверждение пароля</li>
+	<li>методы PDO</li>
+	<li>правильное заполнение форм через рергулярное выражение</li>
 </ul>
 
 </html>
