--- a/index.html
+++ b/index.html
@@ -276,6 +276,16 @@
 	<li>методы PDO</li>
 	<li>правильное заполнение форм через рергулярное выражение</li>
 </ul>
+<h1>28.04.2019</h1>
+<ul class="list4b">
+	<li>изменение данных пользователей</li>
+	<li>метод table</li>
+	<li>метод SET</li>
+	<li>метод UPDATE</li>
+	<li>свой проект MVC</li>
+</ul>
+
+
 
 </html>
 
